--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@
 title: DIY Electronics Blog
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A small blog storing details of my builds. Most of my projects are based around
+  Microchip's PICs (PIC16 and PIC24) as this is what I'm used to working on.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://nerobot.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  nerobot
